# nmpc_acados_px4_cpp

./: CMakeLists.txt  README.md  commands.md  package.xml
include/nmpc_acados_px4_cpp/: nmpc_solver.hpp  offboard_control_node.hpp
include/nmpc_acados_px4_cpp/px4_utils/: core_funcs.hpp  flight_phases.hpp
include/nmpc_acados_px4_cpp/transformations/: adjust_yaw.hpp
src/: nmpc_solver.cpp  offboard_control_node.cpp  run_node.cpp
